AJAX: Append characters to the page

--- a/ajax/ajax.html
+++ b/ajax/ajax.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <head>
-    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4="   crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-2.2.3.js" integrity="sha256-laXWtGydpwqJ8JA+X9x2miwmaiKhn8tVmOVEigRNtP4=" crossorigin="anonymous"></script>
     <script src="app.js"></script>
   </head>
   <body>
@@ -9,6 +9,8 @@
     <button class="js-character-ajax">
       Make an AJAX for characters
     </button>
+
+    <ul class="js-character-list"></ul>
 
   </body>
 </html>
