AJAX: Add Rey to the characters list

--- a/ajax/ajax.html
+++ b/ajax/ajax.html
@@ -10,6 +10,10 @@
       Make an AJAX for characters
     </button>
 
+    <button class="js-add-rey">
+      Add Rey to the list of characters
+    </button>
+
     <ul class="js-character-list"></ul>
 
   </body>
