AJAX: Add prevent default examples

--- a/ajax/ajax.html
+++ b/ajax/ajax.html
@@ -14,7 +14,22 @@
       Add Rey to the list of characters
     </button>
 
+
+    <div>
+      <a class="js-stop-link" href="http://starwars.wikia.com/wiki/Main_Page">
+        Learn more than you ever wanted to know about Star Wars on Wookiepedia.
+      </a>
+
+      <form>
+        <input type="text" name="the_text_input">
+        <button class="js-submit-button">
+          Submit this form
+        </button>
+      </form>
+    </div>
+
     <ul class="js-character-list"></ul>
+
 
   </body>
 </html>
