--- a/spotify_artists/index.html
+++ b/spotify_artists/index.html
@@ -9,7 +9,11 @@
 </head>
 <body>
 	<input type="text" class="js-artist-input" placeholder="Search for an artist">
+
 	<button class="js-artist-submit">Search</button>
+
+  <ul class="js-albums-list"></ul>
+
 	<ul class="artist-list">
 	</ul>
 </body>
