--- a/spotify-skeleton/index.html
+++ b/spotify-skeleton/index.html
@@ -19,7 +19,7 @@
 		<!-- Try adding/removing these classes: -->
 		<!-- disabled -->
 		<!-- playing -->
-		<div class="btn-play disabled"></div>
+		<div class="js-player-btn btn-play disabled"></div>
 
 		<div class="metadata">
 		  <p class="title js-player-title">Hunger of The Pine</p>
@@ -34,7 +34,7 @@
 		<img class="js-player-img" src="https://i.scdn.co/image/04da6dfc1f5f45fdeba938a0cc71cf372524fd43">
 		</div>
 
-		<audio src="https://p.scdn.co/mp3-preview/8e9c5ffdc38e91659bfe8b6bd44650dfc25a3d31"></audio>
+		<audio class="js-player-audio" src="https://p.scdn.co/mp3-preview/8e9c5ffdc38e91659bfe8b6bd44650dfc25a3d31"></audio>
 	</div>
 
 </body>
