Spotify Player: Update progress bar

--- a/spotify-skeleton/index.html
+++ b/spotify-skeleton/index.html
@@ -26,7 +26,7 @@
 		  <p class="author js-player-artist">alt-J</p>
 
 		  <div class="seekbar">
-		    <progress value="5" max="30"></progress>
+		    <progress class="js-player-bar" value="0" max="30"></progress>
 		  </div>
 		</div>
 		</div>
